# yocto

./: LICENSE  README.md
example-shared-lib-with-yocto/: CMakeLists.txt
example-shared-lib-with-yocto/inc/: hello-world.hpp
example-shared-lib-with-yocto/src/: hello-world.cpp
